brat/test/golden/error/toplevel-leftovers.brat
f :: Nat, Bool
f = 42
