brat/test/golden/error/toplevel-leftovers.brat.golden
Error in test/golden/error/toplevel-leftovers.brat on line 2:
f = 42
    ^^

  Type mismatch when checking f
Expected: (a1 :: Nat), (b1 :: Bool)
But got:  (a1 :: Nat)


